# fos

./: .dockerignore  .gitignore  .rustfmt.toml  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  FOS 神经元方案.txt  GITHUB_PUSH_GUIDE.txt  LICENSE  README.md  clippy.toml  deny.toml  push-to-github.ps1  rust-toolchain.toml
.cargo/: config.toml
.fos/skills/: workflow.md
.github/: ISSUE_TEMPLATE.md  SECURITY.md
.github/workflows/: cd.yml  ci.yml  quality.yml
deploy/k8s/: deployment.yaml  network-policy.yaml  statefulset.yaml
deploy/monitoring/: fluent-bit.conf  fos_alerts.yml  grafana_dashboard.json  prometheus.yml
docs/: CORE-SUMMARY.md  DEVELOPMENT.md  FOS-MASTER-CONTROL.md  FOS产品开发任务书_v1.0.md  PRODUCT_SUMMARY.md  PROGRESS.md  PROJECT-COMPLETION-REPORT.md  TASK-INDEX.md  USER_GUIDE.md
docs/api/: API.md
docs/architecture/: ARCHITECTURE.md
docs/reports/: PROGRESS-UPDATE.md  STEP-001-report.md  STEP-002-report.md  STEP-003-report.md  STEP-004-report.md  STEP-005-report.md  STEP-006-report.md  STEP-007-report.md  STEP-008-report.md  STEP-009-report.md  STEP-010-report.md  STEP-011-report.md  STEP-012-report.md  STEP-013-report.md  STEP-014-report.md  STEP-015-module-compile-fix.md  STEP-015-report.md  STEP-021-report.md  STEP-022-report.md  STEP-023-report.md  STEP-024-report.md  STEP-025-report.md  STEP-026-report.md  (+61 more)
src/: Cargo.toml
src/audit/: Cargo.toml
src/audit/src/: config.rs  error.rs  lib.rs  logger.rs  main.rs  query.rs  report.rs
src/backup/: Cargo.toml  README.md  STEP-084-085-SUMMARY.md
src/backup/src/: backup.rs  config.rs  error.rs  executor.rs  incremental.rs  lib.rs  main.rs  scheduler.rs
src/benches/: Cargo.toml  lib.rs
src/benches/benches/: system_benchmark.rs
src/bootstrap/: Cargo.toml
src/bootstrap/src/: bootstrap_test.rs  checker.rs  config.rs  coordinator.rs  error.rs  initializer.rs  lib.rs  phases.rs
src/bus/: Cargo.toml
src/bus/src/: config.rs  error.rs  executor.rs  lib.rs  main.rs  queue.rs  scheduler.rs
src/cache/: Cargo.toml
src/cache/src/: cache.rs  config.rs  distributed.rs  entry.rs  error.rs  lib.rs  local_distributed.rs  main.rs  stats.rs
src/chaos/: Cargo.toml
src/chaos/src/: chaos_engine.rs  fault_injection.rs  lib.rs  recovery.rs
src/cli/: README.md  pyproject.toml
src/cli/src/fos_cli/: __init__.py  __main__.py  config.py  main.py  models.py  parser.py
src/cli/tests/: test_parser.py
src/common/: Cargo.toml
src/common/src/: anchor.rs  command.rs  element.rs  error.rs  event.rs  lib.rs  message.rs  result.rs  status.rs
src/config/: Cargo.toml
src/config/src/: error.rs  lib.rs  loader.rs  main.rs  sources.rs  validator.rs  watcher.rs
src/eventlog/: Cargo.toml
src/eventlog/src/: aggregator.rs  config.rs  error.rs  lib.rs  main.rs  tracer.rs
src/gateway/: Cargo.toml
src/gateway/src/: config.rs  error.rs  handler.rs  lib.rs  main.rs  middleware.rs  protocol.rs  server.rs  token.rs  validator.rs
src/health/: Cargo.toml
src/health/src/: checker.rs  checks.rs  config.rs  error.rs  healing.rs  lib.rs  reporter.rs  status.rs
src/idempotency/: Cargo.toml
src/idempotency/src/: cache.rs  checker.rs  config.rs  error.rs  key.rs  lib.rs  main.rs  manager.rs
src/lock/: Cargo.toml
src/lock/src/: config.rs  error.rs  lib.rs  lock.rs  manager.rs  queue.rs
src/mcp/: Cargo.toml
src/mcp/src/: device.rs  enhanced_manager.rs  error.rs  heartbeat.rs  lib.rs  main.rs  manager.rs  offline_cache.rs  protocol.rs
src/memory/: Cargo.toml
src/memory/src/: error.rs  lib.rs  main.rs  models.rs  repository.rs  storage.rs  version.rs
src/migration/: Cargo.toml
src/migration/src/: config.rs  error.rs  lib.rs  main.rs  manager.rs  version.rs
src/monitoring/: Cargo.toml
src/monitoring/src/: alert.rs  health.rs  lib.rs  main.rs  metrics.rs
src/notifier/: Cargo.toml
src/notifier/src/: channel.rs  config.rs  error.rs  lib.rs  main.rs
src/permission/: Cargo.toml
src/permission/src/: checker.rs  config.rs  error.rs  lib.rs  main.rs  policy.rs  role.rs
src/plugin/: Cargo.toml
src/plugin/src/: config.rs  error.rs  lib.rs  lifecycle.rs  loader.rs  main.rs  plugin.rs  sandbox.rs
src/ratelimiter/: Cargo.toml
src/ratelimiter/src/: circuit.rs  circuit_breaker.rs  config.rs  error.rs  factory.rs  leaky_bucket.rs  lib.rs  limiter.rs  main.rs  token_bucket.rs
src/rollback/: Cargo.toml
src/rollback/src/: config.rs  error.rs  executor.rs  lib.rs  main.rs  snapshot.rs  verifier.rs
src/sandbox/: Cargo.toml
src/sandbox/src/: error.rs  executor.rs  isolation.rs  lib.rs  main.rs  sandbox.rs  snapshot.rs  validator.rs
src/schedule/: Cargo.toml
src/schedule/src/: config.rs  cron.rs  cron.rs.backup  delayed_queue.rs  delayed_queue.rs.old  error.rs  job.rs  job_test.rs  lib.rs  main.rs
src/security/: Cargo.toml
src/security/src/: lib.rs  penetration.rs  vulnerability.rs
src/shutdown/: Cargo.toml
src/shutdown/src/: cleaner.rs  config.rs  coordinator.rs  error.rs  lib.rs  main.rs  signal.rs  waiter.rs
src/skills/: Cargo.toml
src/skills/src/: adapter.rs  definition.rs  error.rs  lib.rs  loader.rs  main.rs  registry.rs  skill.rs  version.rs
src/stability/: Cargo.toml
src/stability/src/: error.rs  lib.rs  runner.rs  tests.rs  utils.rs
src/transaction/: Cargo.toml
src/transaction/src/: config.rs  coordinator.rs  error.rs  lib.rs  log.rs  main.rs  participant.rs  state.rs
src/validator/: Cargo.toml
src/validator/src/: config.rs  engine.rs  error.rs  lib.rs  main.rs  redline.rs  rules.rs  validator.rs
tests/: Cargo.toml  test-config.toml
tests/common/: mod.rs
tests/integration/: audit_test.rs  backup_test.rs  bus_test.rs  cache_test.rs  consistency_test.rs  core_integration_test.rs  eventlog_test.rs  gateway_test.rs  infrastructure_test.rs  mcp_test.rs  memory_test.rs  migration_test.rs  notifier_test.rs  permission_test.rs  plugin_test.rs  rollback_test.rs  sandbox_test.rs  schedule_test.rs  structure_test.rs  system_integration_test.rs  validator_test.rs
tests/test-utils/: Cargo.toml
tests/test-utils/src/: assertions.rs  context.rs  fixtures.rs  helpers.rs  lib.rs  mocks.rs
(+2 files in other folders)
