[workspace]
resolver = "2"
members = [
    # 共享类型库（必须最先编译）
    "common",
    # 核心模块 (不可修改)
    "gateway",
    "validator",
    "memory",
    "bus",
    "audit",
    # 扩展模块 (可完善)
    "sandbox",
    "skills",
    "mcp",
    # 新增核心模块
    "rollback",
    "permission",
    "eventlog",
    "notifier",
    # 基础设施模块
    "bootstrap",
    "shutdown",
    "health",
    # 数据一致性模块
    "transaction",
    "lock",
    "idempotency",
    # 运维支持模块
    "migration",
    "backup",
    "ratelimiter",
    # 扩展能力模块
    "plugin",
    "schedule",
    "cache",
    # 支撑模块
    "config",
    "monitoring",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/fos-platform/fos-extension"
authors = ["FOS Team"]

[workspace.dependencies]
# 内部模块
fos-common = { path = "common" }

# 异步运行时
tokio = { version = "1.35", features = ["full"] }
tokio-util = "0.7"

# 网络和协议
tonic = "0.10"
prost = "0.12"

# 序列化
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"

# 数据库
sqlx = { version = "0.7", features = ["runtime-tokio", "postgres", "chrono"] }

# 日志
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# 错误处理
anyhow = "1.0"
thiserror = "1.0"

# 配置管理
config = "0.14"

# 性能和工具
bytes = "1.5"
once_cell = "1.19"

# UUID
uuid = { version = "1.6", features = ["v4", "serde"] }

# 时间
chrono = { version = "0.4", features = ["serde"] }

# 正则表达式
regex = "1.10"

# 测试
mockall = "0.12"

# 异步 trait
async-trait = "0.1"

[workspace.lints.rust]
# 错误级别警告
warnings = "deny"
rust_2018_idioms = "deny"
future_incompatible = "deny"
nonstandard_style = "deny"

# 拒绝不安全的代码
unsafe_code = "forbid"

[workspace.lints.clippy]
# 严格检查
all = "deny"
cargo = "deny"
nursery = "deny"
pedantic = "deny"

[profile.dev]
opt-level = 0
debug = true
split-debuginfo = "unpacked"

[profile.test]
opt-level = 1
debug = true

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
strip = true
panic = "abort"
incremental = false