[package]
name = "fos-bus"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
fos-common.workspace = true
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
anyhow.workspace = true
thiserror.workspace = true
config.workspace = true
chrono.workspace = true

# 执行总线相关
tonic.workspace = true
prost.workspace = true
uuid.workspace = true

[dev-dependencies]
mockall.workspace = true

[[bin]]
name = "fos-bus"
path = "src/main.rs"