[package]
name = "fos-cache"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
authors = ["FOS Team"]
description = "FOS 多级缓存模块"
repository = "https://github.com/fos-platform/fos"

[lib]
name = "fos_cache"
path = "src/lib.rs"

[dependencies]
fos-common = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
chrono = { workspace = true }
async-trait = "0.1"
anyhow = "1.0"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
redis = { version = "0.24", features = ["tokio-comp", "connection-manager"], optional = true }
bytes = "1.5"

[features]
default = []
redis = ["dep:redis"]

[lints]
workspace = true

[[bin]]
name = "fos-cache"
path = "src/main.rs"
