[package]
name = "fos-chaos"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
authors = ["FOS Team"]
description = "FOS 混沌工程和故障恢复测试模块"
repository = "https://github.com/fos-platform/fos"

[workspace]

[dependencies]
# 内部模块
fos-cache = { path = "../cache" }
fos-lock = { path = "../lock" }
fos-rollback = { path = "../rollback" }

# 异步运行时
tokio = { version = "1.35", features = ["full"] }

# 序列化
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# 错误处理
thiserror = "1.0"

# 时间
chrono = { version = "0.4", features = ["serde"] }

# 随机数
rand = "0.8"

[dev-dependencies]
tokio-test = "0.4"