[package]
name = "fos-gateway"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "fos-gateway"
path = "src/main.rs"

[dependencies]
# 内部模块
fos-common.workspace = true

# 工作空间依赖
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
anyhow.workspace = true
thiserror.workspace = true
config.workspace = true
bytes.workspace = true
once_cell.workspace = true
chrono.workspace = true
uuid.workspace = true
regex.workspace = true

# 特定依赖
axum = "0.7"
hyper = "1.0"
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace"] }

[dev-dependencies]
mockall.workspace = true