[package]
name = "fos-mcp"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
fos-common.workspace = true
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
anyhow.workspace = true
thiserror.workspace = true
config.workspace = true
chrono.workspace = true
uuid = { version = "1.6", features = ["serde", "v4"] }
bincode = "1.3"

# gRPC 相关
tonic.workspace = true
prost.workspace = true
prost-build = "0.12"
tokio-stream = "0.1"

# 设备协议
async-trait = "0.1"

[dev-dependencies]
mockall.workspace = true

[build-dependencies]
tonic-build = "0.10"

[[bin]]
name = "fos-mcp"
path = "src/main.rs"