[package]
name = "fos-migration"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
authors = ["FOS Team"]
description = "FOS 数据迁移模块"
repository = "https://github.com/fos-platform/fos"

[lib]
name = "fos_migration"
path = "src/lib.rs"

[dependencies]
fos-common = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
async-trait = "0.1"
anyhow = "1.0"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[lints]
workspace = true

[[bin]]
name = "fos-migration"
path = "src/main.rs"
