[package]
name = "fos-monitoring"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
fos-common.workspace = true
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
anyhow.workspace = true
thiserror.workspace = true

[dev-dependencies]
mockall.workspace = true

[[bin]]
name = "fos-monitoring"
path = "src/main.rs"
