[package]
name = "fos-notifier"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
authors = ["FOS Team"]
description = "FOS 通知服务模块"
repository = "https://github.com/fos-platform/fos"

[lib]
name = "fos_notifier"
path = "src/lib.rs"

[dependencies]
fos-common = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
async-trait = { workspace = true }
uuid = { workspace = true }
anyhow = "1.0"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[lints]
workspace = true

[[bin]]
name = "fos-notifier"
path = "src/main.rs"
