[package]
name = "fos-plugin"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
authors = ["FOS Team"]
description = "FOS 插件系统模块"
repository = "https://github.com/fos-platform/fos"

[lib]
name = "fos_plugin"
path = "src/lib.rs"

[dependencies]
fos-common = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
chrono = { workspace = true }
semver = "1.0"
toml = "0.8"
anyhow = "1.0"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[dev-dependencies]
tempfile = "3"

[lints]
workspace = true

[[bin]]
name = "fos-plugin"
path = "src/main.rs"
