[package]
name = "fos-shutdown"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
authors = ["FOS Team"]
description = "FOS 优雅关闭模块"
repository = "https://github.com/fos-platform/fos"

[lib]
name = "fos_shutdown"
path = "src/lib.rs"

[dependencies]
fos-common = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
anyhow = "1.0"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[dev-dependencies]
tokio-test = "0.4"

[lints]
workspace = true

[[bin]]
name = "fos-shutdown"
path = "src/main.rs"
