[package]
name = "fos-transaction"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
authors = ["FOS Team"]
description = "FOS 事务管理模块"
repository = "https://github.com/fos-platform/fos"

[lib]
name = "fos_transaction"
path = "src/lib.rs"

[dependencies]
fos-common = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.6", features = ["v4", "serde"] }
anyhow = "1.0"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[lints]
workspace = true

[[bin]]
name = "fos-transaction"
path = "src/main.rs"
