[package]
name = "fos-validator"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
fos-common.workspace = true
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
anyhow.workspace = true
thiserror.workspace = true
config.workspace = true

# 验证相关
regex = "1.10"
chrono = { version = "0.4", features = ["serde"] }

[dev-dependencies]
mockall.workspace = true

[[bin]]
name = "fos-validator"
path = "src/main.rs"